Fixed ugly scrollbar! Can't believe I never noticed it!

--- a/css/todo_style.css
+++ b/css/todo_style.css
@@ -9,27 +9,6 @@ body {
 div#grid-container {
     background: #d9d6cc;
 }
-::-webkit-scrollbar {
-  width: 14px;
-  height: 18px;
-}
-::-webkit-scrollbar-thumb {
-  height: 6px;
-  border: 4px solid rgba(0, 0, 0, 0);
-  background-clip: padding-box;
-  background-color: rgba(255, 255, 255, 0.2);
-  -webkit-border-radius: 7px;
-  -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05),
-    inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-}
-::-webkit-scrollbar-button {
-  display: none;
-  width: 0;
-  height: 0;
-}
-::-webkit-scrollbar-corner {
-  background-color: transparent;
-}
 /* NAVBAR */
 /* ************************************************************** */
 div#navbar {
@@ -65,6 +44,18 @@ span.left-sidebar-header-text {
     div#left-sidebar-header::after {
         border-width: 2px;
     }
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #2b2e36; 
+}
+::-webkit-scrollbar-thumb {
+  background: #7e8084; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #a7a8ab; 
 }
 /* WORKSPACE */
 /* ************************************************************** */
